--- a/src/components/ui/TabList.scss
+++ b/src/components/ui/TabList.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  flex-direction: column;
   flex-wrap: nowrap;
   box-shadow: 0 2px 2px var(--color-light-shadow);
   background-color: var(--color-background);
